<resources>

    <string name="app_name">Mega Ultra Ping Pong Deluxe</string>
    <string name="app_short_name">M.U.P.P.D</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="new_game">NEW GAME</string>
    <string name="resume_game">RESUME</string>
    <string name="player">PLAYER</string>
    <string name="options">OPTIONS</string>
    <string name="pause_text">TOUCH TO CONTINUE</string>
    <string name="wins">WINS</string>
    <string name="continue_txt_win">- CONTINUE -</string>
    <string name="configurations_saved">Configurations Saved. Start a new game in order to take effect</string>
    <string name="btMultiplayerTitle">BLUETOOTH MULTIPLAYER</string>
    <string name="btStatusOff">BLUETOOTH OFF</string>
    <string name="btStatusOn">BLUETOOTH ON</string>
    <string name="btStatusError">BLUETOOTH NOT FOUND</string>
    <string name="btHost">HOST A NEW GAME</string>
    <string name="btClient">CONNECT TO A GAME</string>
    <string name="btStatusErrorTurningOn">Error turning on Bluetooth</string>
    <string name="btStatusErrorTurningDiscoveryOn">Error enabling discoverability</string>
    <string name="btConnectionError">Connection Error, bad luck? Please try again</string>
    <string name="btConnected">Connected</string>
    <string name="findBTHost">SCAN FOR HOST</string>
    <string name="findBTHostStop">STOP SCANNING</string>
    <string name="cancelHost">CANCEL</string>
    <string name="hostWating">WATING FOR CLIENT</string>
    <string-array name="controller_array">
        <item>HUMAN</item>
        <item>HUMAN 3:1</item>
        <item>CPU EASY</item>
        <item>CPU MEDIUM</item>
        <item>CPU HARD</item>
        <item>CPU ULTRA</item>
    </string-array>
    <string-array name="modifier_names">
        <item>No Defined Name</item>
        <item>Pair of Balls</item>
        <item>Devil\'s Sin</item>
        <item>Laser</item>
        <item>Paddle Size</item>
        <item>Solid Block</item>
        <item>Speed Modifier</item>
        <item>Invisible Ball</item>
        <item>Block Wall</item>
        <item>Extra Paddle</item>
        <item>Trip</item>
        <item>Immobilize</item>
        <item>Remote Control</item>
    </string-array>

</resources>