<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".network.BluetoothActivity" >

    <TextView
        android:id="@+id/btTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/btMultiplayerTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/btStatusView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        android:clickable="true"
        android:onClick="turnOnBt"
        android:text="@string/btStatusOff"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/btClientTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"
        android:clickable="true"
        android:onClick="btClient"
        android:text="@string/btClient"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/btHostTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:clickable="true"
        android:onClick="btHost"
        android:text="@string/btHost"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/watingClientTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btHostTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:text="@string/hostWating"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/cancelHostTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:clickable="true"
        android:onClick="watingAction"
        android:text="@string/cancelHost"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
